# goq

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  wrangler.jsonc
.github/workflows/: ci.yml  portal-release.yml  release.yml  sigil-hardware-uat.yml  sigil-release.yml  website.yml
crates/sigil-host/: Cargo.toml
crates/sigil-host/src/: appliance.rs  audio.rs  authorization.rs  clock.rs  config.rs  config_management.rs  cursor.rs  identity.rs  input.rs  main.rs  moq_catalog.rs  secure_state.rs  server.rs  source.rs
crates/sigil-host/src/input/: acl.rs  keymap.rs  linux.rs  mod.rs
crates/sigil-host/src/server/: adaptive.rs  handlers.rs  media_v2.rs  media_v3.rs  mod.rs  moq.rs  session.rs  startup.rs
crates/sigil-host/src/source/: annexb.rs  external.rs  gstreamer_properties.rs  in_process.rs  mod.rs  preflight.rs
crates/sigil-host/tests/fixtures/: upstream-gamescope-pipewire-contract.json
crates/sigil-protocol/: Cargo.toml
crates/sigil-protocol/src/: audio.rs  error.rs  feedback.rs  framing.rs  handshake.rs  input.rs  invitation.rs  lib.rs  media.rs  media_v3.rs  moq_catalog.rs
decky/: .gitignore  README.md  compatibility.json  main.py  package.json  plugin.json  pnpm-lock.yaml
decky/py_modules/goq_sigil/: __init__.py  controller.py  errors.py  runner.py
decky/src/: api.ts  index.tsx  model.d.mts  model.mjs
decky/tests/: model.test.mjs
decky/tests/backend/: test_controller.py
docs/: SETUP.md  cloudflare-pages.md  cloudflare-worker.md  compatibility-identifiers.md  fresh-bazzite-host.md  portal-platform-support.md  portal-release.md  public-alpha-uat.md  public-release-delivery.md  research-yubikey-options.md  sigil-appliance-config-v1.md  sigil-appliance-enrollment-reset-v1.md  sigil-appliance-status-v1.md  sigil-appliance-status-v2.md  sigil-host-activation.md
docs/evidence/: 2026-06-23-ctap-hid-fido2-titan-communication.md  2026-06-23-fido2-hid-raw-hidraw.md  2026-06-23-hmac-iroh-derivation.md  2026-06-23-iroh-native-ping.md  2026-06-23-yubikey-hmac-detection.md  README.md
docs/hardware-uat/: MATRIX.md  README.md
docs/hardware-uat/7920c5d21434/: REPORT.md  summary.env  uat-provenance.txt
openspec/: project.md
openspec/changes/validate-tauri-yubikey-iroh-mvp/: design.md  proposal.md  tasks.md
openspec/changes/validate-tauri-yubikey-iroh-mvp/specs/viability-testing/: spec.md
openspec/specs/iroh-session/: spec.md
openspec/specs/remote-control/: spec.md
openspec/specs/yubikey-identity/: spec.md
portal/: adaptive-feedback.mjs  adaptive-feedback.test.mjs  audio-envelope.test.mjs  audio-pipeline.mjs  audio-pipeline.test.mjs  audio-ring.mjs  audio-ui.mjs  audio-ui.test.mjs  audio-worklet.js  audio-worklet.test.mjs  av-sync.test.mjs  codecs.js  connection-attempt.mjs  connection-attempt.test.mjs  connection-state.mjs  connection-state.test.mjs  control-runtime.mjs  control-runtime.test.mjs  controller-runtime.mjs  controller-runtime.test.mjs  decoder-recovery.mjs  decoder-recovery.test.mjs  enrollment-ui.test.mjs  enrollment.mjs  enrollment.test.mjs  frame-envelope.mjs  frame-envelope.test.mjs  frame-session.mjs  frame-session.test.mjs  frame-stats.mjs  frame-stats.test.mjs  index.html  input-runtime.mjs  input-runtime.test.mjs  input-state.mjs  input-state.test.mjs  keyboard-map.mjs  keyboard-map.test.mjs  main.js  mouse-input-wiring.test.mjs  (+22 more)
release/: sigil-target-contract.txt
scripts/: 50-sigil-spark-audio.conf  70-sigil-remote-input.rules  72-sigil-uinput.rules  99-sigil-uinput.rules  bazzite-inventory.sh  build-portal-dist.sh  install-bazzite-package.sh  loopback-proof.sh  package-bazzite-release.sh  package-decky-plugin.py  package-macos-client.sh  public-alpha-uat.sh  rollback-bazzite-release.sh  run-bazzite-hardware-uat.sh  run-linux-cross-build-gate.sh  run-shell-tests.sh  sigil-host.service  sign-bazzite-release.sh  stage-bazzite-release.sh  verify-demo-build.sh  verify-macos-portal-signature.sh  verify-portal-release.py  verify-sigil-bootstrap.py  verify-sigil-release.sh  verify-website.sh  verify_ci_cross_build_policy.py
scripts/tests/: authenticated-probe-proof.sh  bazzite-canonical-home.sh  bazzite-hardware-uat-native-mode.sh  bazzite-hardware-uat-selection.sh  bazzite-host-executable-layout.sh  bazzite-inventory-cold-boot.sh  bazzite-inventory-gstreamer.sh  bazzite-package-assets.sh  bazzite-package-install-e2e.sh  bazzite-release-activation.sh  ci-cross-build-policy.sh  compatibility-identifiers.sh  hardware-matrix-fixtures.sh  hardware-matrix.sh  linux-cross-build-gate.sh  package-bazzite-product-contract.sh  package-bazzite-provenance.sh  portal-release.sh  portal-runtime-payload.sh  public-alpha-uat.sh  shell-test-discovery.sh  sigil-appliance-status.sh  sigil-bootstrap.sh  sigil-host-activation-guide.sh  sigil-release-target-contract.sh  sigil-release-verifier.sh  test_ci_cross_build_policy.py  test_decky_package.py  test_portal_release.py  test_sigil_bootstrap.py
src/: audio-envelope.mjs  audio-ring.test.mjs  audio-ui.mjs  audio-ui.test.mjs  av-sync.mjs  controller-state.mjs  controller-state.test.mjs  frame-envelope.test.mjs  frame-session.mjs  frame-session.test.mjs  frame-stats.mjs  frame-stats.test.mjs  index.html  main.js  mouse-input-wiring.test.mjs  pointer-feedback.mjs  pointer-feedback.test.mjs  session-controls-layout.test.mjs  stream-metrics.mjs  stream-metrics.test.mjs  style.css  window-geometry.test.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  platform_capabilities.rs
src-tauri/src/commands/: auth.rs  enrollment.rs  mod.rs  moq_catalog.rs  network.rs  state.rs
src-tauri/src/media/: adaptive_feedback.rs  audio_delivery.rs  connect.rs  frame_channel.rs  input_delivery.rs  media_control.rs  metrics.rs  mod.rs  moq_catalog.rs  moq_receiver.rs  network_diagnostics.rs  object_receiver.rs  transport.rs  video_delivery.rs
src/ui/: index.html
website/: _headers  dither.js  index.html  install-sigil  portal-release.json  styles.css
