[workspace]
members = ["crates/sigil-host", "crates/sigil-protocol", "src-tauri"]
resolver = "2"

[workspace.dependencies]
bytes = "1.11"
iroh-moq = { git = "https://github.com/n0-computer/iroh-live", rev = "5f95758fcd1450e443a9134c9d9342bcc3957b85" }
moq-net = "0.1.18"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
