[package]
name = "portal"
version = "0.1.0"
description = "Portal client for one-to-one Gamescope streaming over iroh"
authors = ["Dami"]
license = "MIT"
edition = "2024"
rust-version = "1.91"

[features]
# Produces an optimized, explicitly insecure demo build while keeping ordinary
# release builds fail-closed around --dev-connect.
demo-direct-node = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes.workspace = true
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
libc = "0.2"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
ctap-hid-fido2 = "3.5"
getrandom = "0.4"
iroh.workspace = true
iroh-moq.workspace = true
moq-net.workspace = true
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
url = "2"
sha2 = "0.10"
openh264 = "0.7"
sigil-protocol = { path = "../crates/sigil-protocol" }

[dev-dependencies]
ed25519-dalek = "3.0.0-rc.4"
tempfile = "3"
