[package]
name = "sigil-host"
version = "0.1.0"
description = "Headless Sigil streaming host"
authors = ["Dami"]
license = "MIT"
edition = "2024"
rust-version = "1.91"
autobins = false
default-run = "sigil"

[features]
default = []
# Explicitly insecure configured-host authorization mode for bounded tests.
# Never infer this capability from the optimization or debug-assertion profile.
demo-auth-bypass = []
in-process-gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[[bin]]
name = "sigil"
path = "src/main.rs"

[[bin]]
name = "sigil-probe"
path = "src/bin/sigil-probe.rs"

[dependencies]
anyhow = "1"
bytes.workspace = true
clap = { version = "4", features = ["derive"] }
getrandom = "0.4"
hang.workspace = true
iroh.workspace = true
iroh-moq.workspace = true
libc = "0.2"
moq-json.workspace = true
moq-net.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sigil-protocol = { path = "../sigil-protocol" }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
web-transport-iroh.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { version = "=0.24.5", optional = true }
gstreamer-app = { version = "=0.24.5", optional = true }
gstreamer-video = { version = "=0.24.5", optional = true }
input-linux = "0.7.1"
libloading = "0.8"
x11rb = { version = "0.13.2", default-features = false }

[dev-dependencies]
tempfile = "3"
