[package]
name = "sigil-protocol"
version = "0.1.0"
description = "Versioned, bounded wire protocol for Sigil"
authors = ["Dami"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[dependencies]
base64 = "0.22"
ed25519-dalek = "3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
